expr_parser.output
Terminals unused in grammar

   TK_Error
   TK_EOF
   TK_ERROR
   TK_Dolar
   TK_Separador


State 64 conflicts: 1 shift/reduce


Grammar

    0 $accept: inputs $end

    1 inputs: opt_eols statementList opt_eols

    2 statementList: statementList opt_eols statement
    3              | statement

    4 eols: eols TK_EOL
    5     | TK_EOL

    6 opt_eols: opt_eols TK_EOL
    7         | %empty

    8 statement: assign_statement
    9          | print_statement
   10          | if_statement
   11          | while_statemet

   12 if_statement: TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement

   14 while_statemet: TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement

   15 BlockStatementOrStatement: statement
   16                          | TK_left_llave opt_eols statementList opt_eols TK_rigth_llave

   17 print_statement: TK_Print expr

   18 assign_statement: TK_Val TK_Asignacion expr
   19                 | TK_VarNombre TK_Asignacion expr

   20 expr: add TK_Igual add
   21     | add TK_Distinto add
   22     | add TK_Menor add
   23     | add TK_Mayor add
   24     | add TK_MenorIgual add
   25     | add TK_MayorIgual add
   26     | add

   27 add: add TK_Op_add term
   28    | add TK_Op_sub term
   29    | term

   30 term: term TK_Op_mul factor
   31     | term TK_Op_div factor
   32     | factor

   33 factor: TK_VarNombre
   34       | TK_NUMERO
   35       | TK_left_par expr TK_rigth_par
   36       | TK_Val


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_Op_add (258) 27
TK_Op_sub (259) 28
TK_Op_mul (260) 30
TK_Op_div (261) 31
TK_left_par (262) 12 13 14 35
TK_rigth_par (263) 12 13 14 35
TK_EOL (264) 4 5 6 12
TK_Error (265)
TK_EOF (266)
TK_ERROR (267)
TK_Asignacion (268) 18 19
TK_Dolar (269)
TK_NUMERO (270) 34
TK_Print (271) 17
TK_Separador (272)
TK_Val (273) 18 36
TK_Igual (274) 20
TK_Distinto (275) 21
TK_Menor (276) 22
TK_Mayor (277) 23
TK_MenorIgual (278) 24
TK_MayorIgual (279) 25
TK_IF (280) 12 13
TK_Else (281) 12
TK_left_llave (282) 16
TK_rigth_llave (283) 16
TK_VarNombre (284) 19 33
TK_While (285) 14


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
inputs (32)
    on left: 1, on right: 0
statementList (33)
    on left: 2 3, on right: 1 2 16
eols (34)
    on left: 4 5, on right: 4 12 13
opt_eols (35)
    on left: 6 7, on right: 1 2 6 14 16
statement (36)
    on left: 8 9 10 11, on right: 2 3 15
if_statement (37)
    on left: 12 13, on right: 10
while_statemet (38)
    on left: 14, on right: 11
BlockStatementOrStatement (39)
    on left: 15 16, on right: 12 13 14
print_statement (40)
    on left: 17, on right: 9
assign_statement (41)
    on left: 18 19, on right: 8
expr (42)
    on left: 20 21 22 23 24 25 26, on right: 12 13 14 17 18 19 35
add (43)
    on left: 27 28 29, on right: 20 21 22 23 24 25 26 27 28
term (44)
    on left: 30 31 32, on right: 27 28 29 30 31
factor (45)
    on left: 33 34 35 36, on right: 30 31 32


State 0

    0 $accept: . inputs $end
    1 inputs: . opt_eols statementList opt_eols
    6 opt_eols: . opt_eols TK_EOL
    7         | . %empty

    $default  reduce using rule 7 (opt_eols)

    inputs    go to state 1
    opt_eols  go to state 2


State 1

    0 $accept: inputs . $end

    $end  shift, and go to state 3


State 2

    1 inputs: opt_eols . statementList opt_eols
    2 statementList: . statementList opt_eols statement
    3              | . statement
    6 opt_eols: opt_eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL        shift, and go to state 4
    TK_Print      shift, and go to state 5
    TK_Val        shift, and go to state 6
    TK_IF         shift, and go to state 7
    TK_VarNombre  shift, and go to state 8
    TK_While      shift, and go to state 9

    statementList     go to state 10
    statement         go to state 11
    if_statement      go to state 12
    while_statemet    go to state 13
    print_statement   go to state 14
    assign_statement  go to state 15


State 3

    0 $accept: inputs $end .

    $default  accept


State 4

    6 opt_eols: opt_eols TK_EOL .

    $default  reduce using rule 6 (opt_eols)


State 5

   17 print_statement: TK_Print . expr
   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 20
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 6

   18 assign_statement: TK_Val . TK_Asignacion expr

    TK_Asignacion  shift, and go to state 24


State 7

   12 if_statement: TK_IF . TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF . TK_left_par expr TK_rigth_par eols BlockStatementOrStatement

    TK_left_par  shift, and go to state 25


State 8

   19 assign_statement: TK_VarNombre . TK_Asignacion expr

    TK_Asignacion  shift, and go to state 26


State 9

   14 while_statemet: TK_While . TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement

    TK_left_par  shift, and go to state 27


State 10

    1 inputs: opt_eols statementList . opt_eols
    2 statementList: statementList . opt_eols statement
    6 opt_eols: . opt_eols TK_EOL
    7         | . %empty

    $default  reduce using rule 7 (opt_eols)

    opt_eols  go to state 28


State 11

    3 statementList: statement .

    $default  reduce using rule 3 (statementList)


State 12

   10 statement: if_statement .

    $default  reduce using rule 10 (statement)


State 13

   11 statement: while_statemet .

    $default  reduce using rule 11 (statement)


State 14

    9 statement: print_statement .

    $default  reduce using rule 9 (statement)


State 15

    8 statement: assign_statement .

    $default  reduce using rule 8 (statement)


State 16

   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   35       | TK_left_par . expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 29
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 17

   34 factor: TK_NUMERO .

    $default  reduce using rule 34 (factor)


State 18

   36 factor: TK_Val .

    $default  reduce using rule 36 (factor)


State 19

   33 factor: TK_VarNombre .

    $default  reduce using rule 33 (factor)


State 20

   17 print_statement: TK_Print expr .

    $default  reduce using rule 17 (print_statement)


State 21

   20 expr: add . TK_Igual add
   21     | add . TK_Distinto add
   22     | add . TK_Menor add
   23     | add . TK_Mayor add
   24     | add . TK_MenorIgual add
   25     | add . TK_MayorIgual add
   26     | add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add      shift, and go to state 30
    TK_Op_sub      shift, and go to state 31
    TK_Igual       shift, and go to state 32
    TK_Distinto    shift, and go to state 33
    TK_Menor       shift, and go to state 34
    TK_Mayor       shift, and go to state 35
    TK_MenorIgual  shift, and go to state 36
    TK_MayorIgual  shift, and go to state 37

    $default  reduce using rule 26 (expr)


State 22

   29 add: term .  [$end, TK_Op_add, TK_Op_sub, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_Igual, TK_Distinto, TK_Menor, TK_Mayor, TK_MenorIgual, TK_MayorIgual, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   30 term: term . TK_Op_mul factor
   31     | term . TK_Op_div factor

    TK_Op_mul  shift, and go to state 38
    TK_Op_div  shift, and go to state 39

    $default  reduce using rule 29 (add)


State 23

   32 term: factor .

    $default  reduce using rule 32 (term)


State 24

   18 assign_statement: TK_Val TK_Asignacion . expr
   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 40
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 25

   12 if_statement: TK_IF TK_left_par . expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF TK_left_par . expr TK_rigth_par eols BlockStatementOrStatement
   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 41
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 26

   19 assign_statement: TK_VarNombre TK_Asignacion . expr
   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 42
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 27

   14 while_statemet: TK_While TK_left_par . expr TK_rigth_par opt_eols BlockStatementOrStatement
   20 expr: . add TK_Igual add
   21     | . add TK_Distinto add
   22     | . add TK_Menor add
   23     | . add TK_Mayor add
   24     | . add TK_MenorIgual add
   25     | . add TK_MayorIgual add
   26     | . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    expr    go to state 43
    add     go to state 21
    term    go to state 22
    factor  go to state 23


State 28

    1 inputs: opt_eols statementList opt_eols .  [$end]
    2 statementList: statementList opt_eols . statement
    6 opt_eols: opt_eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL        shift, and go to state 4
    TK_Print      shift, and go to state 5
    TK_Val        shift, and go to state 6
    TK_IF         shift, and go to state 7
    TK_VarNombre  shift, and go to state 8
    TK_While      shift, and go to state 9

    $default  reduce using rule 1 (inputs)

    statement         go to state 44
    if_statement      go to state 12
    while_statemet    go to state 13
    print_statement   go to state 14
    assign_statement  go to state 15


State 29

   35 factor: TK_left_par expr . TK_rigth_par

    TK_rigth_par  shift, and go to state 45


State 30

   27 add: add TK_Op_add . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    term    go to state 46
    factor  go to state 23


State 31

   28 add: add TK_Op_sub . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    term    go to state 47
    factor  go to state 23


State 32

   20 expr: add TK_Igual . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 48
    term    go to state 22
    factor  go to state 23


State 33

   21 expr: add TK_Distinto . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 49
    term    go to state 22
    factor  go to state 23


State 34

   22 expr: add TK_Menor . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 50
    term    go to state 22
    factor  go to state 23


State 35

   23 expr: add TK_Mayor . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 51
    term    go to state 22
    factor  go to state 23


State 36

   24 expr: add TK_MenorIgual . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 52
    term    go to state 22
    factor  go to state 23


State 37

   25 expr: add TK_MayorIgual . add
   27 add: . add TK_Op_add term
   28    | . add TK_Op_sub term
   29    | . term
   30 term: . term TK_Op_mul factor
   31     | . term TK_Op_div factor
   32     | . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    add     go to state 53
    term    go to state 22
    factor  go to state 23


State 38

   30 term: term TK_Op_mul . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    factor  go to state 54


State 39

   31 term: term TK_Op_div . factor
   33 factor: . TK_VarNombre
   34       | . TK_NUMERO
   35       | . TK_left_par expr TK_rigth_par
   36       | . TK_Val

    TK_left_par   shift, and go to state 16
    TK_NUMERO     shift, and go to state 17
    TK_Val        shift, and go to state 18
    TK_VarNombre  shift, and go to state 19

    factor  go to state 55


State 40

   18 assign_statement: TK_Val TK_Asignacion expr .

    $default  reduce using rule 18 (assign_statement)


State 41

   12 if_statement: TK_IF TK_left_par expr . TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF TK_left_par expr . TK_rigth_par eols BlockStatementOrStatement

    TK_rigth_par  shift, and go to state 56


State 42

   19 assign_statement: TK_VarNombre TK_Asignacion expr .

    $default  reduce using rule 19 (assign_statement)


State 43

   14 while_statemet: TK_While TK_left_par expr . TK_rigth_par opt_eols BlockStatementOrStatement

    TK_rigth_par  shift, and go to state 57


State 44

    2 statementList: statementList opt_eols statement .

    $default  reduce using rule 2 (statementList)


State 45

   35 factor: TK_left_par expr TK_rigth_par .

    $default  reduce using rule 35 (factor)


State 46

   27 add: add TK_Op_add term .  [$end, TK_Op_add, TK_Op_sub, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_Igual, TK_Distinto, TK_Menor, TK_Mayor, TK_MenorIgual, TK_MayorIgual, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   30 term: term . TK_Op_mul factor
   31     | term . TK_Op_div factor

    TK_Op_mul  shift, and go to state 38
    TK_Op_div  shift, and go to state 39

    $default  reduce using rule 27 (add)


State 47

   28 add: add TK_Op_sub term .  [$end, TK_Op_add, TK_Op_sub, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_Igual, TK_Distinto, TK_Menor, TK_Mayor, TK_MenorIgual, TK_MayorIgual, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   30 term: term . TK_Op_mul factor
   31     | term . TK_Op_div factor

    TK_Op_mul  shift, and go to state 38
    TK_Op_div  shift, and go to state 39

    $default  reduce using rule 28 (add)


State 48

   20 expr: add TK_Igual add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 20 (expr)


State 49

   21 expr: add TK_Distinto add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 21 (expr)


State 50

   22 expr: add TK_Menor add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 22 (expr)


State 51

   23 expr: add TK_Mayor add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 23 (expr)


State 52

   24 expr: add TK_MenorIgual add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 24 (expr)


State 53

   25 expr: add TK_MayorIgual add .  [$end, TK_rigth_par, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]
   27 add: add . TK_Op_add term
   28    | add . TK_Op_sub term

    TK_Op_add  shift, and go to state 30
    TK_Op_sub  shift, and go to state 31

    $default  reduce using rule 25 (expr)


State 54

   30 term: term TK_Op_mul factor .

    $default  reduce using rule 30 (term)


State 55

   31 term: term TK_Op_div factor .

    $default  reduce using rule 31 (term)


State 56

    4 eols: . eols TK_EOL
    5     | . TK_EOL
   12 if_statement: TK_IF TK_left_par expr TK_rigth_par . eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF TK_left_par expr TK_rigth_par . eols BlockStatementOrStatement

    TK_EOL  shift, and go to state 58

    eols  go to state 59


State 57

    6 opt_eols: . opt_eols TK_EOL
    7         | . %empty
   14 while_statemet: TK_While TK_left_par expr TK_rigth_par . opt_eols BlockStatementOrStatement

    $default  reduce using rule 7 (opt_eols)

    opt_eols  go to state 60


State 58

    5 eols: TK_EOL .

    $default  reduce using rule 5 (eols)


State 59

    4 eols: eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   12             | TK_IF TK_left_par expr TK_rigth_par eols . BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   13             | TK_IF TK_left_par expr TK_rigth_par eols . BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   15 BlockStatementOrStatement: . statement
   16                          | . TK_left_llave opt_eols statementList opt_eols TK_rigth_llave
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL         shift, and go to state 61
    TK_Print       shift, and go to state 5
    TK_Val         shift, and go to state 6
    TK_IF          shift, and go to state 7
    TK_left_llave  shift, and go to state 62
    TK_VarNombre   shift, and go to state 8
    TK_While       shift, and go to state 9

    statement                  go to state 63
    if_statement               go to state 12
    while_statemet             go to state 13
    BlockStatementOrStatement  go to state 64
    print_statement            go to state 14
    assign_statement           go to state 15


State 60

    6 opt_eols: opt_eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   14               | TK_While TK_left_par expr TK_rigth_par opt_eols . BlockStatementOrStatement
   15 BlockStatementOrStatement: . statement
   16                          | . TK_left_llave opt_eols statementList opt_eols TK_rigth_llave
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL         shift, and go to state 4
    TK_Print       shift, and go to state 5
    TK_Val         shift, and go to state 6
    TK_IF          shift, and go to state 7
    TK_left_llave  shift, and go to state 62
    TK_VarNombre   shift, and go to state 8
    TK_While       shift, and go to state 9

    statement                  go to state 63
    if_statement               go to state 12
    while_statemet             go to state 13
    BlockStatementOrStatement  go to state 65
    print_statement            go to state 14
    assign_statement           go to state 15


State 61

    4 eols: eols TK_EOL .

    $default  reduce using rule 4 (eols)


State 62

    6 opt_eols: . opt_eols TK_EOL
    7         | . %empty
   16 BlockStatementOrStatement: TK_left_llave . opt_eols statementList opt_eols TK_rigth_llave

    $default  reduce using rule 7 (opt_eols)

    opt_eols  go to state 66


State 63

   15 BlockStatementOrStatement: statement .

    $default  reduce using rule 15 (BlockStatementOrStatement)


State 64

   12 if_statement: TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement . TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement .  [$end, TK_EOL, TK_Print, TK_Val, TK_IF, TK_rigth_llave, TK_VarNombre, TK_While]

    TK_EOL  shift, and go to state 67

    TK_EOL    [reduce using rule 13 (if_statement)]
    $default  reduce using rule 13 (if_statement)


State 65

   14 while_statemet: TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement .

    $default  reduce using rule 14 (while_statemet)


State 66

    2 statementList: . statementList opt_eols statement
    3              | . statement
    6 opt_eols: opt_eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   16 BlockStatementOrStatement: TK_left_llave opt_eols . statementList opt_eols TK_rigth_llave
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL        shift, and go to state 4
    TK_Print      shift, and go to state 5
    TK_Val        shift, and go to state 6
    TK_IF         shift, and go to state 7
    TK_VarNombre  shift, and go to state 8
    TK_While      shift, and go to state 9

    statementList     go to state 68
    statement         go to state 11
    if_statement      go to state 12
    while_statemet    go to state 13
    print_statement   go to state 14
    assign_statement  go to state 15


State 67

   12 if_statement: TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL . TK_Else TK_EOL BlockStatementOrStatement

    TK_Else  shift, and go to state 69


State 68

    2 statementList: statementList . opt_eols statement
    6 opt_eols: . opt_eols TK_EOL
    7         | . %empty
   16 BlockStatementOrStatement: TK_left_llave opt_eols statementList . opt_eols TK_rigth_llave

    $default  reduce using rule 7 (opt_eols)

    opt_eols  go to state 70


State 69

   12 if_statement: TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else . TK_EOL BlockStatementOrStatement

    TK_EOL  shift, and go to state 71


State 70

    2 statementList: statementList opt_eols . statement
    6 opt_eols: opt_eols . TK_EOL
    8 statement: . assign_statement
    9          | . print_statement
   10          | . if_statement
   11          | . while_statemet
   12 if_statement: . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement TK_EOL TK_Else TK_EOL BlockStatementOrStatement
   13             | . TK_IF TK_left_par expr TK_rigth_par eols BlockStatementOrStatement
   14 while_statemet: . TK_While TK_left_par expr TK_rigth_par opt_eols BlockStatementOrStatement
   16 BlockStatementOrStatement: TK_left_llave opt_eols statementList opt_eols . TK_rigth_llave
   17 print_statement: . TK_Print expr
   18 assign_statement: . TK_Val TK_Asignacion expr
   19                 | . TK_VarNombre TK_Asignacion expr

    TK_EOL          shift, and go to state 4
    TK_Print        shift, and go to state 5
    TK_Val          shift, and go to state 6
    TK_IF           shift, and go to state 7
    TK_rigth_llave  shift, and go to state 72
    TK_VarNombre    shift, and go to state 8
    TK_While        shift, and go to state 9

    statement         go to state 44
    if_statement      go to state 12
    while_statemet    go to state 13
    print_statement   go to state 14
    assign_statement  go to state 15


State 71
